Final UI implementation for inventory and cart modules